# netwatch

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
deploy/: install.sh  netwatch.service  uninstall.sh
deploy/maintainer-scripts/: postinst  prerm
src/: api.rs  checker.rs  config.rs  lib.rs  main.rs  models.rs  peer_sync.rs  scheduler.rs  update.rs  watcher.rs
src/db/: mod.rs  tests.rs
tests/: api_test.rs  checker_test.rs  config_test.rs  models_test.rs  peer_sync_test.rs  scheduler_test.rs  update_test.rs  watcher_test.rs
