[package]
name = "netwatch"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
notify = "8.2.0"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
thiserror = "2.0.18"
toml = "1.1.2"
arc-swap = "1.9.1"
log = "0.4.29"
rusqlite = { version = "0.39.0", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "hickory-dns"] }
rand = "0.9"
tokio-util = "0.7"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
