[package]
name = "netwatch"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
notify = "8.2.0"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "signal"] }
thiserror = "2.0.18"
toml = "1.1.2"
arc-swap = "1.9.1"
log = "0.4.29"
rusqlite = { version = "0.39.0", features = ["bundled"] }
axum = "0.8"
hostname = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "hickory-dns", "json"] }
rand = "0.9"
tokio-util = "0.7"
clap = { version = "4", features = ["derive"] }
tabled = "0.20"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

[package.metadata.deb]
maintainer = "Granzh <kbolokhov@gmail.com>"
copyright = "2026, Granzh"
license-file = ["LICENSE", "0"]
extended-description = """\
Netwatch is a lightweight, distributed network availability monitor.
Each node probes configured HTTP endpoints and synchronises results
with peer nodes via a gossip protocol."""
depends = "$auto"
section = "net"
priority = "optional"
assets = [
    ["target/x86_64-unknown-linux-musl/release/netwatch", "usr/local/bin/netwatch", "755"],
    ["deploy/netwatch.service", "lib/systemd/system/netwatch.service", "644"],
]
maintainer-scripts = "deploy/maintainer-scripts"
systemd-units = { enable = false }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
